--- a/src/config.json
+++ b/src/config.json
@@ -1,10 +1,14 @@
 {
     "levels": [
         {
-            "maps": {},
+            "maps": {
+                "path":[3, 13, 23, 33, 43, 44, 45, 46, 56, 66, 76, 86, 96]
+            },
             "waves": [{
                 "nbEnemies": 2
             }]
         }
-    ]
+    ],
+    "nbCells" : 10,
+    "cellSize" : 50
 }
