--- a/src/config.json
+++ b/src/config.json
@@ -1,7 +1,7 @@
 {
     "levels": [
         {
-            "maps": {
+            "map": {
                 "path":[3, 13, 23, 33, 43, 44, 45, 46, 56, 66, 76, 86, 96]
             },
             "waves": [{
