--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.3.3",
+    "@babel/plugin-transform-object-super": "^7.10.4",
     "@babel/preset-env": "^7.3.1",
     "babel-cli": "^6.26.0",
     "babel-loader": "^8.0.5",
