--- a/package.json
+++ b/package.json
@@ -25,8 +25,6 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "babel-polyfill": "^6.26.0",
-    "createjs-module": "^0.8.3",
-    "easeljs": "^1.0.2"
+    "babel-polyfill": "^6.26.0"
   }
 }
