Multiple minor improvements
Set rectangular map + implements decrease game speed + change collision detection method between enemies and bullets

--- a/src/config.json
+++ b/src/config.json
@@ -2,14 +2,22 @@
     "levels": [
         {
             "map": {
-                "path":[3, 13, 23, 33, 43, 44, 45, 46, 56, 66, 76, 86, 96]
+                "path": [1, 21, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 76, 96, 116, 136, 156, 176, 175, 174, 173, 172, 171, 170, 169, 168, 167, 187, 207, 227, 247, 267, 287]
             },
             "waves": [{
                 "nbEnemies": 12
-            }
-        ]
+            }]
+        },        
+        {
+            "map": {
+                "path": [1, 16, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 55, 70, 85, 100, 115, 130, 129, 128, 127, 142, 157, 172, 187, 202, 217]
+            },
+            "waves": [{
+                "nbEnemies": 12
+            }]
         }
     ],
-    "nbCells" : 10,
-    "cellSize" : 50
+    "nbColumns": 20,
+    "nbRows": 15,
+    "cellSize": 50
 }
