Set global path points

--- a/src/config.json
+++ b/src/config.json
@@ -2,7 +2,9 @@
     "levels": [
         {
             "map": {
-                "path": [1, 21, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 76, 96, 116, 136, 156, 176, 175, 174, 173, 172, 171, 170, 169, 168, 167, 187, 207, 227, 247, 267, 287]
+                "path": [1, 21, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 76, 96, 116, 136, 156, 176, 175, 174, 173, 172, 171, 170, 169, 168, 167, 187, 207, 227, 247, 267, 287],
+                "from": "top",
+                "to": "bottom"
             },
             "waves": [{
                 "nbEnemies": 12
